# traveling_app

./: .gitignore  README.md
backend/travel_data_aggregator/: .env  Cargo.toml
backend/travel_data_aggregator/src/: amadeus_api.rs  amadeus_auth.rs  api_clients.rs  handlers.rs  lib.rs  models.rs
frontend/project/: index.html  package-lock.json  package.json
frontend/project/src/: App.tsx
frontend/project/src/components/: AutoBookingSettings.tsx  BudgetSettings.tsx  ChatInterface.tsx  FinancialConnect.tsx  SearchBar.tsx  TravelCard.tsx  TravelSuggestions.tsx
frontend/project/src/data/: travelData.ts
