[package]
name = "travel_data_aggregator"
version = "0.1.0"
edition = "2024" # <-- Interesting, see below

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_urlencoded = "0.7"
dotenv = "0.15"
url_encoded_data = "0.5" # For building x-www-form-urlencoded body


[dev-dependencies]
httpmock = "0.4.4"

[[bin]]
name = "travel_data_aggregator"
path = "src/bin/travel_data_aggregator.rs"